fix bug where people page footer was not showing

--- a/src/pages/about/people.module.scss
+++ b/src/pages/about/people.module.scss
@@ -296,13 +296,9 @@ $mobileSectionGap: 40px;
   position: relative;
 
   .image {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    z-index: -1;
   }
 
   .content {
